# game-programming-template

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  conanfile.txt
inc/: Game.hpp
lua/: lua.hpp
src/: Game.cpp  main.cpp
